--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "miners"]
 	path = miners
-	url = https://github.com/LuKePicci/nvOC_miners.git
+	url = https://github.com/papampi/nvOC_miners.git
