--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-﻿################################################################################
-# Il file gitignore è stato creato automaticamente da Microsoft(R) Visual Studio.
-################################################################################
-
-/.vs
+﻿/.vs
 /mocks
 /nvoc_logs
+1bash
