--- a/1bash.template
+++ b/1bash.template
@@ -723,7 +723,7 @@ GBX_POOL="replace_with_pool_address"
 GBX_PORT="replace_with_pool_port"
 GBX_WORKER="$WORKERNAME"
 
-Groestl (GRS)
+# Groestl (GRS)
 GRS_ADDRESS="replace_with_your_address"
 GRS_EXTENSION_ARGUMENTS=""
 GRS_POOL="moria.dwarfpool.com"
