Added Cryptonight Heavy

--- a/1bash.template
+++ b/1bash.template
@@ -70,9 +70,11 @@
 #          More tempcontrol alert color and verbosity options
 # v=0029 : papampi
 #          Nice Algo extension arguments 
+# v=0030 : papampi
+#          CryptoNightHeavy  
 
 nvOC_Ver="nvOC v0019-2.1 - Community Release" # Do not edit this
-nvOC_1bash_ver="v0019-2.1.0029"   # Do not edit this
+nvOC_1bash_ver="v0019-2.1.0030"   # Do not edit this
 
 # fullzero:     nvOC creator
 
@@ -481,6 +483,11 @@ CRYPTONIGHTV7_INTENSITY="0"
 CRYPTONIGHTV7_MINER="xmr-stak"
 CRYPTONIGHTV7_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
+## CRYPTONIGHTHEAVY
+CRYPTONIGHTHEAVY_INTENSITY="0"
+CRYPTONIGHTHEAVY_MINER="xmr-stak"
+CRYPTONIGHTHEAVY_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+
 ## Decred
 DCR_INTENSITY="0"
 DCR_MINER="TPccminer"
@@ -758,6 +765,13 @@ LBC_POOL="lbry.suprnova.cc"
 LBC_PORT="6256"
 LBC_WORKER="$WORKERNAME"
 
+#Loki (LOKI)
+LOKI_ADDRESS="replace_with_your_address"
+LOKI_EXTENSION_ARGUMENTS=""
+LOKI_POOL="LOKI_POOL"
+LOKI_PORT="LOKI_PORT"
+LOKI_WORKER="$WORKERNAME"
+
 # Lux Coin (LUX)
 LUX_ADDRESS="replace_with_your_address"
 LUX_EXTENSION_ARGUMENTS=""
@@ -1027,6 +1041,12 @@ NICE_CRYPTONIGHT_PORT="3355"
 NICE_CRYPTONIGHT_WORKER="$WORKERNAME"
 NICE_CRYPTONIGHT_EXTENSION_ARGUMENTS=""
 
+#NICE_CRYPTONIGHT HEAVY stratum+tcp://
+NICE_CNHEAVY_POOL="cryptonightheavy.eu.nicehash.com:3355"
+NICE_CNHEAVY_PORT="3364"
+NICE_CNHEAVY_WORKER="$WORKERNAME"
+NICE_CNHEAVY_EXTENSION_ARGUMENTS=""
+
 #NICE_X11GOST stratum+tcp://
 NICE_X11GOST_POOL="x11gost.eu.nicehash.com"
 NICE_X11GOST_PORT="3359"
@@ -1149,6 +1169,7 @@ MPH_GRS_EXTENSION_ARGUMENTS=""
 BITCORE_COINS="BTX"
 CRYPTONIGHT_COINS="KRB,NICE_CRYPTONIGHT"
 CRYPTONIGHTV7_COINS="XMR,MPH_CRYPTONIGHTV7,NICE_CRYPTONIGHTV7,ETN"
+CRYPTONIGHTHEAVY="LOKI,NICE_CNHEAVY"
 DECRED_COINS="DCR"
 EQUIHASH_COINS="BTG,ZEC,ZEN,HUSH,ZCL,BTCP,KMD,ZPOOL_EQUIHASH,MPH_EQUIHASH,NICE_EQUIHASH,VOTE,BTCP,BCI"
 ETHASH_COINS="ETH,ETC,EXP,UBQ,CLO,MUSIC,SOIL,MPH_ETHASH,PIRL,NICE_ETHASH,ETP,CLAYMORE_DUAL"
