--- a/1bash.template
+++ b/1bash.template
@@ -72,9 +72,11 @@
 #          Nice Algo extension arguments 
 # v=0030 : papampi
 #          CryptoNightHeavy  
+# v=0031 : papampi
+#          New EWBF v0.3  
 
 nvOC_Ver="nvOC v0019-2.1 - Community Release" # Do not edit this
-nvOC_1bash_ver="v0019-2.1.0030"   # Do not edit this
+nvOC_1bash_ver="v0019-2.1.0031"   # Do not edit this
 
 # fullzero:     nvOC creator
 
@@ -451,9 +453,12 @@ CLAYMORE_OPTS=""                                 # Claymore optional arguments. 
 EQUIHASH_MINER="DSTM"                            # Choose "DSTM" or "EWBF" or "BMINER"
 EQUIHASH_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"  # Chose the format your pool requires 
 DSTM_OPTS=""                                     # DSTM Miner optional arguments add "--telemetry=$IPW:42000" if you want web info
-EWBF_VERSION="3_4"                               # choose 3_3  or  3_4 # EWBF ZEC Miner version
+
 EWBF_PERCENT="0"                                 # change EWBF_PERCENT to alter donation percent for EWBF Miner   
-EWBF_OPTS=""                                     # EWBF ZEC Miner optional arguments. add "--api $IPW:42000" if you want web info
+EWBF_OPTS=""                                     # EWBF Equihash Miner optional arguments. add "--api $IPW:42000" if you want web info
+EWBF_VERSION="3_4"                               # choose "3_3" or "3_4" or new "v0_3" # EWBF Equihash Miner version
+                                                 # If the new "v0_3" version selected you need to add new parameters to COIN_EXTENSION_ARGUMENTS
+						 # For example add "--algo 144_5 --pers BgoldPoW" for BitcoinGold
 
 BMINER_OPTS=""                                   # Bminer optional arguments. add "--api $IPW:42000" if you want web info
 BMINER_PROTOCOL="stratum"                        # Chose for equihash and ethahsh mining protocols:
