--- a/1bash.template
+++ b/1bash.template
@@ -109,7 +109,7 @@ v0029="papampi; Nice Algo extension arguments"
 v0030="papampi;CryptoNightHeavy"  
 v0031="papampi;New EWBF v0.3"  
 v0032="papampi;Version numbering"
-v0033="papampi;ZHASH Algo, Z_EWBF Miner"
+v0033="papampi;ZHASH, PHI1612, PHI2 Algos and Z_EWBF Algo"
 
 # Do not edit these lines
 nvOC_Ver="v0019-2.1" 
@@ -509,9 +509,14 @@ PASCAL_MINER="TPccminer"
 PASCAL_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## PHI1612
-PHI_INTENSITY="0"
-PHI_MINER="ANXccminer"
-PHI_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+PHI1612_INTENSITY="0"
+PHI1612_MINER="ANXccminer"
+PHI1612_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+
+## PHI2
+PHI2_INTENSITY="0"
+PHI2_MINER="ANXccminer"
+PHI2_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## SIA
 SIA_INTENSITY="0"
@@ -1161,7 +1166,8 @@ LYRA2Z_COINS="XZC,MPH_LYRA2Z"
 MYR_GR_COINS="XMY,MPH_MYR_GR"
 NEOSCRYPT_COINS="FTC,ORB,PXC,VIVO,TZC,NICE_NEOSCRYPT,DSR,CRC,GBX,MPH_NEOSCRYPT,ZPOOL_NEOSCRYPT"
 PASCAL_COINS="PASC,PASL"
-PHI_COINS="LUX,FLM,SERA"
+PHI1612_COINS="FLM,SERA"
+PHI2_COINS="LUX"
 SIA_COINS="SIA"
 SIB_COINS="SIB,NICE_X11GHOST"
 SKEIN_COINS="ZPOOL_SKEIN,MPH_SKEIN"
