--- a/1bash.template
+++ b/1bash.template
@@ -109,7 +109,7 @@ v0029="papampi; Nice Algo extension arguments"
 v0030="papampi;CryptoNightHeavy"  
 v0031="papampi;New EWBF v0.3"  
 v0032="papampi;Version numbering"
-v0033="papampi;ZHASH, PHI1612, PHI2 Algos and Z_EWBF Algo"
+v0033="papampi;ZHASH, PHI1612, PHI2 Algos and Z_EWBF Miner"
 
 # Do not edit these lines
 nvOC_Ver="v0019-2.1" 
